--- a/final.tex
+++ b/final.tex
@@ -1,15 +1,33 @@
-\documentclass[11pt]{amsart}
-\usepackage{geometry}
-\geometry{letterpaper}
-\usepackage{graphicx}
-\usepackage{amssymb}
-\usepackage{epstopdf}
+\documentclass{article}
+\usepackage{blindtext}
+\usepackage[utf8]{inputenc}
 
-\title{}
+\title{Efficient Proofs}
 \author{Gilbert Pajela, John Downs}
-\date{12/18/2015}
+\date{12/14/2015}
 
 \begin{document}
+
 \maketitle
+
+\section{Efficient Zero Knowledge Proofs}
+
+\subsection{Motivation}
+\subsection{Method}
+\subsection{Results}
+
+\section{Computationally Sounds Proofs}
+
+\subsection{Motivation}
+\subsection{Method}
+\subsection{Results}
+
+
+\section{Interactive Proofs for Muggles}
+
+\subsection{Motivation}
+\subsection{Method}
+\subsection{Results}
+
 
 \end{document}
