--- a/final.tex
+++ b/final.tex
@@ -16,7 +16,7 @@
 \subsection{Method}
 \subsection{Results}
 
-\section{Computationally Sounds Proofs}
+\section{Computationally Sound Proofs}
 
 \subsection{Motivation}
 \subsection{Method}
