--- a/final.tex
+++ b/final.tex
@@ -2,7 +2,7 @@
 \usepackage{blindtext}
 \usepackage[utf8]{inputenc}
 
-\title{Efficient Proofs}
+\title{Efficient Proofs of Knowledge}
 \author{Gilbert Pajela, John Downs}
 \date{12/14/2015}
 
@@ -11,12 +11,44 @@
 \maketitle
 
 \begin{abstract}
-Computationally efficient zero knowledge protocols are neat...
+  Classical interactive proof systems, while secure, are often not
+  sufficiently efficient for a number of applications. By making some
+  reasonable assumptions about the computational power of an honest
+  prover/verifier system, it is possible to design very efficient
+  protocols. In this paper, we will examine several protocols for
+  efficient interactive proof systems. The key application is a
+  secure and certifiable delegation of computation.
 \end{abstract}
 
-\section{Introduction}
+\section*{Introduction}
 
-\section{Efficient Zero Knowledge Proofs}
+Perhaps the most obvious use of an interactive proof system is
+authentication. The prover wishes to demonstrate that it knows
+something special tied to its identity. The other, and possibly more
+interesting use is to securely delegate computation. A well known real
+world example is the Berkely Open Infrastructure for Network Computing
+(BOINC). BOINC is perhaps most famous for SETI@home, where it would
+take advantage extra CPU cycles on client machines. It suffers an
+unfortunate weakness where it trusts the computation of the
+clients. Privacy minded extraterrestrials, given sufficient resources,
+could corrupt the clients and provide computations that obscure rather
+than reveal their communications.
+
+In circumstances where the adversary might be more malicious, it would
+help if we could verify the computation. However, efficiency is of the
+utmost concern here. If it takes as long to verify the computation as
+it does to do the computation, you might as well have done it
+yourself. A similar concern exists if the verifier has limited
+computational resources. If the verifier is too limited to complete
+the verification step, the protocol is useless against a cheating
+prover.
+
+This paper examines protocols that make efficiency improvements over
+classical ones. While these new protocols assume that an honest prover
+has some limited computational power, they remain secure against
+cheating adversaries with unbounded resources.
+
+\section{Efficient Zero Knowledge Proofs \cite{Kilian92}}
 
 \subsection{Motivation}
 Interactive proof systems have the following form. A system $(P,V)$
@@ -156,189 +188,204 @@ responds with a zero knowledge proof that $V$
 would have accepted. This is repeated $24k$
 times to achieve an error probability of $2^{-k}$.
 
-\subsection{Efficient arguments for NP}
+\subsection{Communication Efficient Arguments for NP}
 
-We can transform the above zero knowledge proof into a computationally zero knowledge argument.
+Consider a zero knowledge argument protocol that begins by $P$
+generating a blob for the proof and sending that to $V$.
+$V$
+replies with a challenge $b$,
+and $P$
+responds appropriately. It is assumed that it is computationally
+difficult for $P$
+to cheat, making this an argument instead of a proof. There is an
+inefficiency here, where in each iteration of the protocol, the entire
+proof string is sent to the verifier, $O(n^{1+\epsilon}l)$
+bits. But the rest of the protocol only requires $O(log^cl)$
+bits. This can be improved by using a Merkle trees.
+Essentially, the tree is a binary tree that is computationally
+difficult to change, because each non-leaf node is hashed with the
+value of it's children, using a collision intractable hash
+function. The prover can commit the root of the tree and share it with
+$V$.
+Then at the reveal step, $P$
+can reveal just the path of the tree that was chosen.
 
-...
-
-\section{Computationally Sound Proofs}
+\section{Computationally Sound Proofs \cite{Micali00}}
 
 \subsection{Definitions}
-A proof of a statement $S$ is computationally sound if it is in the form of some short string $\sigma$ that is easy to find, even easier to verify and provides computational assurance of it's truth. More precisely, it must be possible to find $\sigma$ in time similar to that needed to accept $S$.
+A proof of a statement $S$
+is computationally sound if it is in the form of some short string
+$\sigma$
+that is easy to find, even easier to verify and provides computational
+assurance of it's truth. More precisely, it must be possible to find
+$\sigma$ in time similar to that needed to accept $S$.
 
 \subsection{Requirements}
-By considering efficiency relative to the difficulty of the problem at hand, we can develop an understanding of computationally sound proofs for all true statements. The first requirement of such a proof system is that verifying must be simpler than accepting in all cases. Additionally, the prover's required power must be similar to that required for accepting. Finally, the system must be applicable to all semirecursive languages.
+By considering efficiency relative to the difficulty of the problem at
+hand, we can develop an understanding of computationally sound proofs
+for all true statements. The first requirement of such a proof system
+is that verifying must be simpler than accepting in all
+cases. Additionally, the prover's required power must be similar to
+that required for accepting.  Any proof system that meets these
+requirements is called Feasibly Complete.  Finally, the system must be
+applicable to all semirecursive languages.
 
-Semirecursive languages are...
-
-Feasible completeness requirements...
+Semirecursive languages can be defined in two ways, with respect to
+either accepting or verifying. The first definition states a language
+$L$
+is semirecursive iff there exists an accepting Turning machine such
+that for all $x \in L$,
+$A(x) = YES$.
+The other states that $L$
+is semirecursive iff there is a verifying Turning machine that halts
+on all inputs, where for each $x \in L$,
+there is some binary string $\sigma$ where $V(x, \sigma) = YES$.
 
 \subsection{CS Language and Proof Systems}
 
-The first construction we require is a CS language. The language is the set of all quadruples $c = (M, x, y, t)$ with the following constraints. $M$ is some Turing machine, $x$ and $y$ are binary strings, and $t$ is a binary string representing an integer no longer than either $|x|$ or $|y|$. Finally, $M(x)$ must output $y$ in $t$ steps.
+The first construction we require is a CS language. The language is
+the set of all quadruples $q = (M, x, y, t)$
+with the following constraints. $M$
+is some Turing machine, $x$
+and $y$
+are binary strings, and $t$
+is a binary string representing an integer no longer than either $|x|$
+or $|y|$. Finally, $M(x)$ must output $y$ in $t$ steps.
 
-An oracle is a function from binary strings of length $a$ to binary strings of length $b$. If an algorithm $A$ calls some oracle $f$, this is written $A^f$. If $A$ calls multiple oracles $f_1, f_2$ this is written $A^{f_1,f_2}$. For simplicity, an oracle query is considered as a single step, although it could be polynomial in $a$ and $b$ without effecting these results in any fundamental way.
+An oracle is a function from binary strings of length $a$
+to binary strings of length $b$.
+If an algorithm $A$
+calls some oracle $f$,
+this is written $A^f$.
+If $A$
+calls multiple oracles $f_1, f_2$
+this is written $A^{f_1,f_2}$.
+For simplicity, an oracle query is considered as a single step,
+although it could be polynomial in $a$
+and $b$ without effecting these results in any fundamental way.
 
-$P{(.)}$ and  $V{(.)}$ are two Turing machines using random oracles, where  $V{(.)}$ runs in polynomial time. $(P,V)$ is a CS proof system with a random oracle if the system has feasible completeness and computational soundness.
+$P{(.)}$
+and $V{(.)}$
+are two Turing machines using random oracles, where $V{(.)}$
+runs in polynomial time. $(P,V)$
+is a CS proof system with a random oracle if the system has feasible
+completeness and computational soundness.
 
-Formally, this is...
+$(P,V)$
+requires a shared oracle $f$,
+a quadruple $q$
+that $P$
+claims is a member of $L$,
+and a security parameter $k$.
+$P^f(q,1^k)$
+will execute and produce a CS certificate $C$
+that $V^f(q,1^k,C)$ will verify.
 
-$(P,V)$ requires a shared oracle $f$, a quadruple $q$ that $P$ claims is a member of $L$, and a security parameter $k$. $P^f(q,1^k)$ will execute and produce a CS certificate $C$ that $V^f(q,1^k,C)$ will verify.
+Because we only have computational soundness, we leave room for
+erroneous proofs, but in practice the probability of finding one is
+negligible, so they will not be seen in practice. This means that
+while CS proofs may be inconsistent, they are computationally
+indistinguishable from consistent systems. This is achieved simply by
+making cheating hard enough by increasing the security parameter than
+no actual prover has the resources to cheat effectively.
 
-Because we only have computational soundness, we leave room for erroneous proofs, but in practice the probability of finding one is negligible, so they will not be seen in practice. This means that while CS proofs may be inconsistent, they are computationally indistinguishable from consistent systems. This is achieved simply by making cheating hard enough by increasing the security parameter than no actual prover has the resources to cheat effectively.
+\subsection{A Computationally Sound Protocol}
 
-\subsection{CS Proofs are Efficient}
+A CS Protocol can be constructed by making modifications to the efficient zero knowledge argument protocol described above. The input is a quadruple $q$ that is a member of the $CS$ language. To generate a proof, $P$ runs $M(x)$ and records the history of $t$ steps as $\sigma$. This record is a proof that $M(x) = y$. $\sigma$ can be converted into a probabilisticly checkable form $t$ in time $poly(t)$. Then $t$ is converted to a Merkle tree, so only the root needs to be shared initially. $V$ responds with a random tape corresponding to the values it wishes to sample, and $P$ reveals the appropriate path on the tree.
 
-\subsection{P and NP}
-CS Proofs are important and meaningful even if P = NP!
+By using a random oracle, it is possible to make this protocol non-interactive. $P$ will query the oracle for some $k$ random tapes and produce the correct responses for them. $P$ then sends all $k$ responses to $V$, who can use the same oracle to verify the proofs.
 
-\subsection{Interactive CS Proofs}
-
- An interactive CS proof is ..
-
-  Example construction...
-
-Random Strings...
-
-\subsection {Computationally Sound Checkers}
-
-Validating one sided heuristics...
-CS checker definition
-CS checker implmeneting SAT
+In order for $P$ to cheat in this scenario, it would need to be able to find a collision in the collision intractable hash functions used to create the Merkle trees. The probability of the malicious prover being able to find such a collision is negligible. Even if it were to succeed in finding one, it would still need to perform this feat $k$ times.
 
 \subsection {Certified Computation}
 
-Constructing certified computation systems
+Certified computation asks the question ``is $y$
+the correct output for algorithm $A$
+with input $x$?''.
+This is both useful for verifying that the underlying implementation
+of $A$
+is functioning properly, and not being sabotaged by hardware failures
+or cosmic rays \footnote{Perhaps caused by our introverted alien
+  friends from before, or malicious Emacs butterflies
+  https://xkcd.com/378/}.
+We may also be interested in proving the computation was correct without requiring the verifier to perform it.
 
-Pros and cons
+Such a system might be constructed by augmenting $A$ as $A'$ during compilation. In addition to computing what $A$ computes, it outputs a certificate $C$, that can be verified by a CS verifier $V$. As long as $V$ is developed using standard formal methods for assuring correctness, we can be confident when it asserts some computation certificate is valid. This is because the likelihood of finding another string $\sigma$ that collides with $C$ is negligible.
 
-Implementations
+The downside to such a system, besides the cost of producing a certificate being about equal to calculating $A(x)$, is that their construction relies on the execution history of a Turing machine. This is certainly not a practical implementation tool. Any practical construction would require an similar record of computation that was as rigorous.
 
 
-\section{Interactive Proofs for Muggles}
+\section{Interactive Proofs for Muggles \cite{Goldwasser08}}
 
-Traditional interactive proofs assume a computationally unbounded prover, but it is possible to construct these proofs with a polynomial time prover,a Muggle instead of Merlin, and a linear time verifier.
+Traditional interactive proofs assume a computationally unbounded
+prover, but it is possible to construct these proofs with a polynomial
+time prover,a Muggle instead of Merlin, and a linear time verifier.
 
-- 1. intro
-  - complexity-theoretic setting
-  - cryptographic setting
-  - delegating computation
-  - roadmap for section 1
-- 1.1 main result
-  - thm. 1.1
-  - corollary 1.2
-  - comparison to prior work on interactive proofs
-  - comparison to prior work in other models
-- 1.2 one-round arguments
-  - thm. 1.3
-  - applying kalai and raz (2009) to other interactive proofs
-- 1.3 public coin log-space verifiers
-  - corollary 1.4
-- 1.4 non-uniform circuit families
-  - thm. 1.5
-- 1.5 succinct 0kn proofs
-  - thm. 1.6 - 1.7
-- 1.6 results on ipcp and pca  - low communication and short interactive pcp
-  - pca w/efficient provers
-- 1.7 subsequent work
-- 1.8 bird's-eye view of the protocol
-  - the big picture
-  - going from layer to layer
-  - utilizing uniformity
-  - organization of the exposition
-- 2. preliminaries
-- 2.1 turing machines, circuits, and complexity classes
-- 2.2 interactive proofs
-  - def. 2.1
-- 2.3 low-degree extension
-  - prop. 2.2
-  - proof
-  - claim 2.3
-  - proof
-- 2.4 low-degree test
-  - lemma 2.4
-- 2.5 interactive sum-check protocol
-  - lemma 2.5
-  - proof
-- 2.6 private information retrieval (PIR)
-  - def. 2.6
-- 3. the bare-bones protocol for delegating computation
-  - thm. 3.1
-- 3.1 preliminaries
-  - parameters
-  - assumptions and notations
-- 3.2 the bare-bones protocol
-  - protocol overview
-  - the i-th phase
-  - the d-th phase
-  - the final verification
-- 3.3 proof of thm. 3.1
-  - completeness
-  - soundness
-  - complexity
-- 4. interactive proofs: implementing the bare-bones protocol
-  - conventions: a recap
-- 4.1 interactive proofs for nl
-- 4.1.1 circuits for nl languages w/efficient low-degree $add_i$, $mult_i$
-  - overview
-  - step 1
-    - lemma 4.1
-    - proof
-      - preliminaries
-      - the circuit c
-      - the constant gates
-      - the input sub-circuit
-      - intermediate sub-circuits
-      - the machine g
-  - step 2
-    - claim 4.2
-    - proof
-  - step 3
-    - lemma 4.3
-    - proof
-- 4.1.2 realizing the bare-bones protocol
-  - thm. 4.4
-  - proof
-  - corollary 4.5
-- 4.2 interactive proofs for l-uniform circuits
-  - claim 4.6
-  - proof
-  - thm. 4.7 (1.1)
-  - proof
-  - corollary 4.8
-  - thm. 4.9
-- 4.3 protocols for delegating non-uniform computation
-  - thm. 4.10 (1.5)
-  - proof
-- 5. low-communication 0kn interactive proofs
-  - notation
-  - thm. 5.1 (1.6)
-  - thm. 5.2 (1.7)
-  - proof (idea)
-  - proof of thm. 1.6
-  - proof of thm. 1.7
-- 6. one-round arguments for delegating computation
-  - thm. 6.1 [kalai and raz 2009]
-  - thm. 6.2 (1.3)
-- 7. an interactive pcp
-- 7.1 preliminaries
-  - def. 7.1 [kalai and raz 2008]
-- 7.2 new improved interactive pcps
-  - thm. 7.2
-  - corollary 7.3
-  - remark
-  - thm. 7.4
-  - proof outline
-  - comparison w/the scheme of kalai and raz [2008]
-  - proof of thm. 7.4
-    - parameters
-    - analysis of the protocol
-- 8. a probabilistically checkable argument
-  - def. 8.1 [kalai and raz 2009]
-  - remark
-  - thm. 8.2 [kalai and raz 2009]
-  - thm. 8.3
-  - remark
+The primary application in this case is proving the correctness of
+delegated polynomial-time computations. In order to make delegation
+worthwhile, a method needs to be extremely efficient. Particularly,
+the verifier should run linearly in the input size and polylog in the
+size of the computation of L. The prover complexity is polynomial in
+the size of the input, and the communication complexity is polylog in
+the size of the computation.
+
+Applications are large scale distributed computing such as Berkley
+Open Infrastructure for Network Computing (SETI@home) and
+communication with peripheral devices that may have very constrained
+computational power.
+
+A key point to consider are that it must be sound against dishonest verifiers who may have unbounded computational power.
+
+For any langage $L$
+that can be computed by a family of $(O(log(S(n)))$-space
+uniform boolean circuits of size $S(n)$
+and depth $d(n)$
+has an interactive proof with the following properties.
+
+1. The prover runs in time $poly(S(n))$
+and the verifier runs in time $n \cdot poly(d(n), logS(n))$
+and space $O(log(S(n)))$.
+
+2. The protocol is complete and sound.
+
+3. The protocol is public coin with communication complexity
+$d(n) \cdot polylog(S(n))$
+
+The goal is to reduce $V$'s runtime to be proportional to the depth of $C$ instead of it's size and to not significantly increase the runtime of $P$.
+
+\subsection{Non Interactive CS Certificates}
+
+\subsection{Public Coin Log Space Verifiers}
+
+\subsection{Non-Uniform Circuit Families}
+
+\subsection{Short Zero Knowledge Proofs}
+
+\subsection{IPCP and PCA}
+
+\subsection{Methods}
+
+\subsection{The Protocol}
+
+
+\begin{thebibliography}{9}
+
+\bibitem{Kilian92}
+    Joe Kilian,
+    \emph{A note on efficient zero-knowledge proofs and arguments (Extended Abstract)},
+    1992.
+
+\bibitem{Micali00}
+    Silvio Micali.
+    \emph{COMPUTATIONALLY SOUND PROOFS}
+    2000.
+
+\bibitem{Goldwasser08}
+    Shafi Goldwasser, Yael Tauman Kalai and Guy N. Rothblum
+    \emph{Delegating computation: interactive proofs for muggles}
+    In Proceedings of the ACM Symposium on the Theory of Computing (STOC),
+    2008.
+
+\end{thebibliography}
 
 \end{document}
